--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+
+allure-results/
+reports/
+target/
+.idea/
+#####################################################
 # Compiled class file
 *.class
 
